Support CamelCase path mapping (#71)
Support CamelCase path mapping for classes. 
Address issue https://github.com/gestalt-config/gestalt/issues/28