@@ -5,6 +5,7 @@ import org.github.gestalt.config.exceptions.GestaltException;
 import org.github.gestalt.config.lexer.SentenceLexer;
 import org.github.gestalt.config.node.ConfigNodeService;
 import org.github.gestalt.config.node.LeafNode;
+import org.github.gestalt.config.path.mapper.StandardPathMapper;
 import org.github.gestalt.config.reflect.TypeCapture;
 import org.github.gestalt.config.utils.ValidateOf;
 import org.junit.jupiter.api.Assertions;
@@ -66,7 +67,8 @@ class BigDecimalDecoderTest {
         BigDecimalDecoder doubleDecoder = new BigDecimalDecoder();
 
         ValidateOf<BigDecimal> validate = doubleDecoder.decode("db.port", new LeafNode("124.5"), TypeCapture.of(Double.class),
-            new DecoderRegistry(Collections.singletonList(doubleDecoder), configNodeService, lexer));
+            new DecoderRegistry(Collections.singletonList(doubleDecoder), configNodeService, lexer,
+                List.of(new StandardPathMapper())));
         Assertions.assertTrue(validate.hasResults());
         Assertions.assertFalse(validate.hasErrors());
         Assertions.assertEquals(BigDecimal.valueOf(124.5f), validate.results());
@@ -78,7 +80,8 @@ class BigDecimalDecoderTest {
         BigDecimalDecoder doubleDecoder = new BigDecimalDecoder();
 
         ValidateOf<BigDecimal> validate = doubleDecoder.decode("db.port", new LeafNode("124.5"), new TypeCapture<Double>() {
-        }, new DecoderRegistry(Collections.singletonList(doubleDecoder), configNodeService, lexer));
+        }, new DecoderRegistry(Collections.singletonList(doubleDecoder), configNodeService, lexer,
+            List.of(new StandardPathMapper())));
         Assertions.assertTrue(validate.hasResults());
         Assertions.assertFalse(validate.hasErrors());
         Assertions.assertEquals(BigDecimal.valueOf(124.5f), validate.results());
@@ -90,7 +93,8 @@ class BigDecimalDecoderTest {
         BigDecimalDecoder doubleDecoder = new BigDecimalDecoder();
 
         ValidateOf<BigDecimal> validate = doubleDecoder.decode("db.port", new LeafNode("124"), TypeCapture.of(Double.class),
-            new DecoderRegistry(Collections.singletonList(doubleDecoder), configNodeService, lexer));
+            new DecoderRegistry(Collections.singletonList(doubleDecoder), configNodeService, lexer,
+                List.of(new StandardPathMapper())));
         Assertions.assertTrue(validate.hasResults());
         Assertions.assertFalse(validate.hasErrors());
         Assertions.assertEquals(BigDecimal.valueOf(124.0f), validate.results());
@@ -102,7 +106,8 @@ class BigDecimalDecoderTest {
         BigDecimalDecoder doubleDecoder = new BigDecimalDecoder();
 
         ValidateOf<BigDecimal> validate = doubleDecoder.decode("db.port", new LeafNode("12s4"), TypeCapture.of(Double.class),
-            new DecoderRegistry(Collections.singletonList(doubleDecoder), configNodeService, lexer));
+            new DecoderRegistry(Collections.singletonList(doubleDecoder), configNodeService, lexer,
+                List.of(new StandardPathMapper())));
         Assertions.assertFalse(validate.hasResults());
         Assertions.assertTrue(validate.hasErrors());
         Assertions.assertNull(validate.results());
