@@ -5,6 +5,7 @@ import org.github.gestalt.config.exceptions.GestaltException;
 import org.github.gestalt.config.lexer.SentenceLexer;
 import org.github.gestalt.config.node.ConfigNodeService;
 import org.github.gestalt.config.node.LeafNode;
+import org.github.gestalt.config.path.mapper.StandardPathMapper;
 import org.github.gestalt.config.reflect.TypeCapture;
 import org.github.gestalt.config.utils.ValidateOf;
 import org.junit.jupiter.api.Assertions;
@@ -65,7 +66,8 @@ class BigIntegerDecoderTest {
         BigIntegerDecoder doubleDecoder = new BigIntegerDecoder();
 
         ValidateOf<BigInteger> validate = doubleDecoder.decode("db.port", new LeafNode("124"), TypeCapture.of(Double.class),
-            new DecoderRegistry(Collections.singletonList(doubleDecoder), configNodeService, lexer));
+            new DecoderRegistry(Collections.singletonList(doubleDecoder), configNodeService, lexer,
+                List.of(new StandardPathMapper())));
         Assertions.assertTrue(validate.hasResults());
         Assertions.assertFalse(validate.hasErrors());
         Assertions.assertEquals(BigInteger.valueOf(124), validate.results());
@@ -77,7 +79,8 @@ class BigIntegerDecoderTest {
         BigIntegerDecoder doubleDecoder = new BigIntegerDecoder();
 
         ValidateOf<BigInteger> validate = doubleDecoder.decode("db.port", new LeafNode("124"), new TypeCapture<Double>() {
-        }, new DecoderRegistry(Collections.singletonList(doubleDecoder), configNodeService, lexer));
+        }, new DecoderRegistry(Collections.singletonList(doubleDecoder), configNodeService, lexer,
+            List.of(new StandardPathMapper())));
         Assertions.assertTrue(validate.hasResults());
         Assertions.assertFalse(validate.hasErrors());
         Assertions.assertEquals(BigInteger.valueOf(124), validate.results());
@@ -89,7 +92,8 @@ class BigIntegerDecoderTest {
         BigIntegerDecoder doubleDecoder = new BigIntegerDecoder();
 
         ValidateOf<BigInteger> validate = doubleDecoder.decode("db.port", new LeafNode("124"), TypeCapture.of(Double.class),
-            new DecoderRegistry(Collections.singletonList(doubleDecoder), configNodeService, lexer));
+            new DecoderRegistry(Collections.singletonList(doubleDecoder), configNodeService, lexer,
+                List.of(new StandardPathMapper())));
         Assertions.assertTrue(validate.hasResults());
         Assertions.assertFalse(validate.hasErrors());
         Assertions.assertEquals(BigInteger.valueOf(124), validate.results());
@@ -101,7 +105,8 @@ class BigIntegerDecoderTest {
         BigIntegerDecoder doubleDecoder = new BigIntegerDecoder();
 
         ValidateOf<BigInteger> validate = doubleDecoder.decode("db.port", new LeafNode("12s4"), TypeCapture.of(Double.class),
-            new DecoderRegistry(Collections.singletonList(doubleDecoder), configNodeService, lexer));
+            new DecoderRegistry(Collections.singletonList(doubleDecoder), configNodeService, lexer,
+                List.of(new StandardPathMapper())));
         Assertions.assertFalse(validate.hasResults());
         Assertions.assertTrue(validate.hasErrors());
         Assertions.assertNull(validate.results());
@@ -117,7 +122,8 @@ class BigIntegerDecoderTest {
         BigIntegerDecoder doubleDecoder = new BigIntegerDecoder();
 
         ValidateOf<BigInteger> validate = doubleDecoder.decode("db.port", new LeafNode("124.2"), TypeCapture.of(Double.class),
-            new DecoderRegistry(Collections.singletonList(doubleDecoder), configNodeService, lexer));
+            new DecoderRegistry(Collections.singletonList(doubleDecoder), configNodeService, lexer,
+                List.of(new StandardPathMapper())));
         Assertions.assertFalse(validate.hasResults());
         Assertions.assertTrue(validate.hasErrors());
         Assertions.assertNull(validate.results());
