@@ -5,6 +5,7 @@ import org.github.gestalt.config.exceptions.GestaltException;
 import org.github.gestalt.config.lexer.SentenceLexer;
 import org.github.gestalt.config.node.ConfigNodeService;
 import org.github.gestalt.config.node.LeafNode;
+import org.github.gestalt.config.path.mapper.StandardPathMapper;
 import org.github.gestalt.config.reflect.TypeCapture;
 import org.github.gestalt.config.utils.ValidateOf;
 import org.junit.jupiter.api.Assertions;
@@ -59,7 +60,8 @@ class CharDecoderTest {
         CharDecoder decoder = new CharDecoder();
 
         ValidateOf<Character> validate = decoder.decode("db.port", new LeafNode("a"), TypeCapture.of(Character.class),
-            new DecoderRegistry(Collections.singletonList(decoder), configNodeService, lexer));
+            new DecoderRegistry(Collections.singletonList(decoder), configNodeService, lexer,
+                List.of(new StandardPathMapper())));
         Assertions.assertTrue(validate.hasResults());
         Assertions.assertFalse(validate.hasErrors());
         Assertions.assertEquals('a', validate.results());
@@ -71,7 +73,8 @@ class CharDecoderTest {
         CharDecoder decoder = new CharDecoder();
 
         ValidateOf<Character> validate = decoder.decode("db.port", new LeafNode("aaa"), TypeCapture.of(Character.class),
-            new DecoderRegistry(Collections.singletonList(decoder), configNodeService, lexer));
+            new DecoderRegistry(Collections.singletonList(decoder), configNodeService, lexer,
+                List.of(new StandardPathMapper())));
         Assertions.assertTrue(validate.hasResults());
         Assertions.assertTrue(validate.hasErrors());
 
@@ -88,7 +91,8 @@ class CharDecoderTest {
         CharDecoder decoder = new CharDecoder();
 
         ValidateOf<Character> validate = decoder.decode("db.port", new LeafNode(""), TypeCapture.of(Character.class),
-            new DecoderRegistry(Collections.singletonList(decoder), configNodeService, lexer));
+            new DecoderRegistry(Collections.singletonList(decoder), configNodeService, lexer,
+                List.of(new StandardPathMapper())));
         Assertions.assertFalse(validate.hasResults());
         Assertions.assertTrue(validate.hasErrors());
         Assertions.assertNull(validate.results());
