@@ -1,11 +1,16 @@
 package org.github.gestalt.config.decoder;
 
+import org.github.gestalt.config.annotations.ConfigPriority;
 import org.github.gestalt.config.entity.ValidationError;
+import org.github.gestalt.config.exceptions.GestaltConfigurationException;
 import org.github.gestalt.config.exceptions.GestaltException;
 import org.github.gestalt.config.lexer.SentenceLexer;
 import org.github.gestalt.config.node.ConfigNode;
 import org.github.gestalt.config.node.ConfigNodeService;
 import org.github.gestalt.config.node.LeafNode;
+import org.github.gestalt.config.node.NodeType;
+import org.github.gestalt.config.path.mapper.PathMapper;
+import org.github.gestalt.config.path.mapper.StandardPathMapper;
 import org.github.gestalt.config.reflect.TypeCapture;
 import org.github.gestalt.config.token.ArrayToken;
 import org.github.gestalt.config.token.ObjectToken;
@@ -16,7 +21,6 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.Mockito;
 
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
@@ -35,8 +39,8 @@ class DecoderRegistryTest {
 
     @Test
     void getDecoder() throws GestaltException {
-        DecoderRegistry decoderRegistry = new DecoderRegistry(Arrays.asList(new DoubleDecoder(), new LongDecoder(), new IntegerDecoder(),
-            new StringDecoder()), configNodeService, lexer);
+        DecoderRegistry decoderRegistry = new DecoderRegistry(List.of(new DoubleDecoder(), new LongDecoder(), new IntegerDecoder(),
+            new StringDecoder()), configNodeService, lexer, List.of(new StandardPathMapper()));
 
         List<Decoder<?>> decoders = decoderRegistry.getDecoders();
 
@@ -46,14 +50,14 @@ class DecoderRegistryTest {
 
     @Test
     void setDecoder() throws GestaltException {
-        DecoderRegistry decoderRegistry = new DecoderRegistry(Arrays.asList(new DoubleDecoder(), new LongDecoder(), new IntegerDecoder(),
-            new StringDecoder()), configNodeService, lexer);
+        DecoderRegistry decoderRegistry = new DecoderRegistry(List.of(new DoubleDecoder(), new LongDecoder(), new IntegerDecoder(),
+            new StringDecoder()), configNodeService, lexer, List.of(new StandardPathMapper()));
 
         List<Decoder<?>> decoders = decoderRegistry.getDecoders();
 
         Assertions.assertEquals(4, decoders.size());
 
-        decoderRegistry.setDecoders(Arrays.asList(new DoubleDecoder(), new LongDecoder()));
+        decoderRegistry.setDecoders(List.of(new DoubleDecoder(), new LongDecoder()));
 
         decoders = decoderRegistry.getDecoders();
 
@@ -62,8 +66,8 @@ class DecoderRegistryTest {
 
     @Test
     void getDecoderForClass() throws GestaltException {
-        DecoderRegistry decoderRegistry = new DecoderRegistry(Arrays.asList(new DoubleDecoder(), new LongDecoder(), new IntegerDecoder(),
-            new StringDecoder()), configNodeService, lexer);
+        DecoderRegistry decoderRegistry = new DecoderRegistry(List.of(new DoubleDecoder(), new LongDecoder(), new IntegerDecoder(),
+            new StringDecoder()), configNodeService, lexer, List.of(new StandardPathMapper()));
 
         List<Decoder> decoders = decoderRegistry.getDecoderForClass(TypeCapture.of(String.class));
 
@@ -73,7 +77,8 @@ class DecoderRegistryTest {
 
     @Test
     void addDecoderForClass() throws GestaltException {
-        DecoderRegistry decoderRegistry = new DecoderRegistry(Collections.singletonList(new StringDecoder()), configNodeService, lexer);
+        DecoderRegistry decoderRegistry = new DecoderRegistry(Collections.singletonList(new StringDecoder()), configNodeService, lexer,
+            List.of(new StandardPathMapper()));
 
         List<Decoder> decoders = decoderRegistry.getDecoderForClass(TypeCapture.of(Double.class));
 
@@ -88,10 +93,30 @@ class DecoderRegistryTest {
     }
 
     @Test
+    void decoderRegistryPathMapperNull() {
+        try {
+            new DecoderRegistry(List.of(new DoubleDecoder(), new LongDecoder(), new IntegerDecoder(),
+                new StringDecoder()), configNodeService, lexer, null);
+        } catch (GestaltException e) {
+            Assertions.assertEquals("pathMappers can not be null or empty", e.getMessage());
+        }
+    }
+
+    @Test
+    void decoderRegistryPathMapperEmpty() {
+        try {
+            new DecoderRegistry(List.of(new DoubleDecoder(), new LongDecoder(), new IntegerDecoder(),
+                new StringDecoder()), configNodeService, lexer, List.of());
+        } catch (GestaltException e) {
+            Assertions.assertEquals("pathMappers can not be null or empty", e.getMessage());
+        }
+    }
+
+    @Test
     void decoderRegistryConfigNodeNull() {
         try {
-            new DecoderRegistry(Arrays.asList(new DoubleDecoder(), new LongDecoder(), new IntegerDecoder(),
-                new StringDecoder()), null, lexer);
+            new DecoderRegistry(List.of(new DoubleDecoder(), new LongDecoder(), new IntegerDecoder(),
+                new StringDecoder()), null, lexer, List.of(new StandardPathMapper()));
         } catch (GestaltException e) {
             Assertions.assertEquals("ConfigNodeService can not be null", e.getMessage());
         }
@@ -100,8 +125,8 @@ class DecoderRegistryTest {
     @Test
     void decoderLexerNull() {
         try {
-            new DecoderRegistry(Arrays.asList(new DoubleDecoder(), new LongDecoder(), new IntegerDecoder(),
-                new StringDecoder()), configNodeService, null);
+            new DecoderRegistry(List.of(new DoubleDecoder(), new LongDecoder(), new IntegerDecoder(),
+                new StringDecoder()), configNodeService, null, List.of(new StandardPathMapper()));
         } catch (GestaltException e) {
             Assertions.assertEquals("SentenceLexer can not be null", e.getMessage());
         }
@@ -110,16 +135,26 @@ class DecoderRegistryTest {
     @Test
     void getDecoderForClassNull() {
         try {
-            new DecoderRegistry(null, configNodeService, lexer);
+            new DecoderRegistry(null, configNodeService, lexer, List.of(new StandardPathMapper()));
         } catch (GestaltException e) {
-            Assertions.assertEquals("Decoder list was null", e.getMessage());
+            Assertions.assertEquals("Decoder list was null or empty", e.getMessage());
         }
     }
 
     @Test
+    void decoderRegistryGetAndSetPathMapper() throws GestaltConfigurationException {
+        DecoderRegistry decoderRegistry = new DecoderRegistry(List.of(new DoubleDecoder(), new LongDecoder(), new IntegerDecoder(),
+                new StringDecoder()), configNodeService, lexer, List.of(new StandardPathMapper()));
+
+        List<PathMapper> pathMappers = List.of(new StandardPathMapper(), new TestPathMapper());
+        decoderRegistry.setPathMappers(pathMappers);
+        Assertions.assertEquals(decoderRegistry.getPathMappers(), pathMappers);
+    }
+
+    @Test
     void getNextNodeObject() throws GestaltException {
-        DecoderRegistry decoderRegistry = new DecoderRegistry(Arrays.asList(new DoubleDecoder(), new LongDecoder(), new IntegerDecoder(),
-            new StringDecoder(), new LongDecoder()), configNodeService, lexer);
+        DecoderRegistry decoderRegistry = new DecoderRegistry(List.of(new DoubleDecoder(), new LongDecoder(), new IntegerDecoder(),
+            new StringDecoder(), new LongDecoder()), configNodeService, lexer, List.of(new StandardPathMapper()));
 
         ConfigNode leaf = new LeafNode("test");
 
@@ -140,8 +175,8 @@ class DecoderRegistryTest {
 
     @Test
     void decodeNode() throws GestaltException {
-        DecoderRegistry decoderRegistry = new DecoderRegistry(Arrays.asList(new DoubleDecoder(), new LongDecoder(), new IntegerDecoder(),
-            new StringDecoder()), configNodeService, lexer);
+        DecoderRegistry decoderRegistry = new DecoderRegistry(List.of(new DoubleDecoder(), new LongDecoder(), new IntegerDecoder(),
+            new StringDecoder()), configNodeService, lexer, List.of(new StandardPathMapper()));
 
         ConfigNode leaf = new LeafNode("value");
 
@@ -154,8 +189,8 @@ class DecoderRegistryTest {
 
     @Test
     void decodeNodeDuplicates() throws GestaltException {
-        DecoderRegistry decoderRegistry = new DecoderRegistry(Arrays.asList(new DoubleDecoder(), new LongDecoder(), new IntegerDecoder(),
-            new StringDecoder(), new LongDecoder()), configNodeService, lexer);
+        DecoderRegistry decoderRegistry = new DecoderRegistry(List.of(new DoubleDecoder(), new LongDecoder(), new IntegerDecoder(),
+            new StringDecoder(), new LongDecoder()), configNodeService, lexer, List.of(new StandardPathMapper()));
 
         ConfigNode leaf = new LeafNode("100");
 
@@ -168,8 +203,9 @@ class DecoderRegistryTest {
 
     @Test
     void decodeNodeDuplicatesCustom() throws GestaltException {
-        DecoderRegistry decoderRegistry = new DecoderRegistry(Arrays.asList(new DoubleDecoder(), new LongDecoder(), new IntegerDecoder(),
-            new StringDecoder(), new LongDecoderCustomHigh(), new LongDecoderCustomVH()), configNodeService, lexer);
+        DecoderRegistry decoderRegistry = new DecoderRegistry(List.of(new DoubleDecoder(), new LongDecoder(), new IntegerDecoder(),
+            new StringDecoder(), new LongDecoderCustomHigh(), new LongDecoderCustomVH()), configNodeService, lexer,
+            List.of(new StandardPathMapper()));
 
         ConfigNode leaf = new LeafNode("100");
 
@@ -181,23 +217,17 @@ class DecoderRegistryTest {
     }
 
     @Test
-    void decodeNodeEmpty() throws GestaltException {
-        DecoderRegistry decoderRegistry = new DecoderRegistry(Collections.emptyList(), configNodeService, lexer);
+    void decodeNodeEmpty() {
+        GestaltException ex = Assertions.assertThrows(GestaltException.class,
+            () -> new DecoderRegistry(Collections.emptyList(), configNodeService, lexer, List.of(new StandardPathMapper())));
+        Assertions.assertEquals("Decoder list was null or empty", ex.getMessage());
 
-        ConfigNode leaf = new LeafNode("value");
-
-        ValidateOf<String> test = decoderRegistry.decodeNode("test", leaf, TypeCapture.of(String.class));
-        Assertions.assertFalse(test.hasResults());
-        Assertions.assertTrue(test.hasErrors());
-
-        Assertions.assertEquals(1, test.getErrors().size());
-        Assertions.assertEquals("No decoders found for class: java.lang.String", test.getErrors().get(0).description());
     }
 
     @Test
     void getNextNodeObjectBadToken() throws GestaltException {
-        DecoderRegistry decoderRegistry = new DecoderRegistry(Arrays.asList(new DoubleDecoder(), new LongDecoder(), new IntegerDecoder(),
-            new StringDecoder()), configNodeService, lexer);
+        DecoderRegistry decoderRegistry = new DecoderRegistry(List.of(new DoubleDecoder(), new LongDecoder(), new IntegerDecoder(),
+            new StringDecoder()), configNodeService, lexer, List.of(new StandardPathMapper()));
 
         ConfigNode leaf = new LeafNode("value");
 
@@ -219,8 +249,8 @@ class DecoderRegistryTest {
 
     @Test
     void getNextNodeObjectNoResultToken() throws GestaltException {
-        DecoderRegistry decoderRegistry = new DecoderRegistry(Arrays.asList(new DoubleDecoder(), new LongDecoder(), new IntegerDecoder(),
-            new StringDecoder()), configNodeService, lexer);
+        DecoderRegistry decoderRegistry = new DecoderRegistry(List.of(new DoubleDecoder(), new LongDecoder(), new IntegerDecoder(),
+            new StringDecoder()), configNodeService, lexer, List.of(new StandardPathMapper()));
 
         ConfigNode leaf = new LeafNode("value");
 
@@ -234,7 +264,7 @@ class DecoderRegistryTest {
         Assertions.assertTrue(test.hasErrors());
 
         Assertions.assertEquals(1, test.getErrors().size());
-        Assertions.assertEquals("Unable to find node matching path: test, for class: MapNode, during decoding",
+        Assertions.assertEquals("Unable to find node matching path: test, for class: leaf, during decoding",
             test.getErrors().get(0).description());
 
         Mockito.verify(lexer, Mockito.times(1)).scan(any());
@@ -243,8 +273,8 @@ class DecoderRegistryTest {
 
     @Test
     void getNextNodeArray() throws GestaltException {
-        DecoderRegistry decoderRegistry = new DecoderRegistry(Arrays.asList(new DoubleDecoder(), new LongDecoder(), new IntegerDecoder(),
-            new StringDecoder()), configNodeService, lexer);
+        DecoderRegistry decoderRegistry = new DecoderRegistry(List.of(new DoubleDecoder(), new LongDecoder(), new IntegerDecoder(),
+            new StringDecoder()), configNodeService, lexer, List.of(new StandardPathMapper()));
 
         ConfigNode leaf = new LeafNode("value");
 
@@ -260,6 +290,110 @@ class DecoderRegistryTest {
         Assertions.assertEquals(leaf, test.results());
 
         Mockito.verify(lexer, Mockito.times(0)).scan(any());
+        Mockito.verify(configNodeService, Mockito.times(1)).navigateToNextNode(any(), any(List.class), any());
+    }
+
+    @Test
+    void getNextNodeMultiPathMappers() throws GestaltException {
+        DecoderRegistry decoderRegistry = new DecoderRegistry(List.of(new DoubleDecoder(), new LongDecoder(), new IntegerDecoder(),
+            new StringDecoder()), configNodeService, lexer, List.of(new StandardPathMapper(), new TestPathMapper()));
+
+        ConfigNode leaf = new LeafNode("test");
+
+        Token nextToken = new ObjectToken("run");
+        Mockito.when(lexer.scan("run")).thenReturn(ValidateOf.valid(Collections.singletonList(nextToken)));
+        Mockito.when(configNodeService.navigateToNextNode("test", List.of(nextToken), leaf)).thenReturn(ValidateOf.valid(leaf));
+
+
+        ValidateOf<ConfigNode> test = decoderRegistry.getNextNode("test", "run", leaf);
+        Assertions.assertTrue(test.hasResults());
+        Assertions.assertFalse(test.hasErrors());
+
+        Assertions.assertEquals(leaf, test.results());
+
+        Mockito.verify(lexer, Mockito.times(1)).scan(any());
+        Mockito.verify(configNodeService, Mockito.times(1)).navigateToNextNode(any(), any(List.class), any());
+    }
+
+    @ConfigPriority(500)
+    public class TestPathMapper implements PathMapper {
+        @Override
+        public ValidateOf<List<Token>> map(String path, String sentence, SentenceLexer lexer) {
+            return ValidateOf.inValid(new ValidationError.NoResultsFoundForNode(path, NodeType.LEAF.getType(), "TestPathMapper"));
+        }
+    }
+    @Test
+    void getNextNodeMultiPathMappersFirstNoFind() throws GestaltException {
+        DecoderRegistry decoderRegistry = new DecoderRegistry(List.of(new DoubleDecoder(), new LongDecoder(), new IntegerDecoder(),
+            new StringDecoder()), configNodeService, lexer, List.of(new TestPathMapper(), new StandardPathMapper()));
+
+        ConfigNode leaf = new LeafNode("test");
+
+        Token nextToken = new ObjectToken("run");
+        Mockito.when(lexer.scan("run")).thenReturn(ValidateOf.valid(Collections.singletonList(nextToken)));
+        Mockito.when(configNodeService.navigateToNextNode("test", List.of(nextToken), leaf)).thenReturn(ValidateOf.valid(leaf));
+
+
+        ValidateOf<ConfigNode> test = decoderRegistry.getNextNode("test", "run", leaf);
+        Assertions.assertTrue(test.hasResults());
+        Assertions.assertFalse(test.hasErrors());
+
+        Assertions.assertEquals(leaf, test.results());
+
+        Mockito.verify(lexer, Mockito.times(1)).scan(any());
+        Mockito.verify(configNodeService, Mockito.times(1)).navigateToNextNode(any(), any(List.class), any());
+    }
+
+    @Test
+    void getNextNodeMultiPathMappersNoneFind() throws GestaltException {
+        DecoderRegistry decoderRegistry = new DecoderRegistry(List.of(new DoubleDecoder(), new LongDecoder(), new IntegerDecoder(),
+            new StringDecoder()), configNodeService, lexer, List.of(new TestPathMapper(), new TestPathMapper()));
+
+        ConfigNode leaf = new LeafNode("test");
+
+        Token nextToken = new ObjectToken("run");
+        Mockito.when(lexer.scan("run")).thenReturn(ValidateOf.valid(Collections.singletonList(nextToken)));
+        Mockito.when(configNodeService.navigateToNextNode("test", List.of(nextToken), leaf)).thenReturn(ValidateOf.valid(leaf));
+
+
+        ValidateOf<ConfigNode> test = decoderRegistry.getNextNode("test", "run", leaf);
+        Assertions.assertFalse(test.hasResults());
+        Assertions.assertTrue(test.hasErrors());
+
+        Assertions.assertEquals(2, test.getErrors().size());
+        Assertions.assertEquals("Unable to find node matching path: test, for class: leaf, during TestPathMapper",
+            test.getErrors().get(0).description());
+        Assertions.assertEquals("Unable to find node matching path: test, for class: leaf, during TestPathMapper",
+            test.getErrors().get(1).description());
+
+        Mockito.verify(lexer, Mockito.times(0)).scan(any());
+        Mockito.verify(configNodeService, Mockito.times(0)).navigateToNextNode(any(), any(List.class), any());
+    }
+
+    @Test
+    void getNextNodeMultiPathMappersNoneFindDuringNavigateToNextNode() throws GestaltException {
+        DecoderRegistry decoderRegistry = new DecoderRegistry(List.of(new DoubleDecoder(), new LongDecoder(), new IntegerDecoder(),
+            new StringDecoder()), configNodeService, lexer, List.of(new TestPathMapper(), new StandardPathMapper()));
+
+        ConfigNode leaf = new LeafNode("test");
+
+        Token nextToken = new ObjectToken("run");
+        Mockito.when(lexer.scan("run")).thenReturn(ValidateOf.valid(Collections.singletonList(nextToken)));
+        Mockito.when(configNodeService.navigateToNextNode("test", List.of(nextToken), leaf))
+               .thenReturn(ValidateOf.inValid(new ValidationError.NoResultsFoundForNode("test", NodeType.LEAF.getType(), "navigate to next node")));
+
+
+        ValidateOf<ConfigNode> test = decoderRegistry.getNextNode("test", "run", leaf);
+        Assertions.assertFalse(test.hasResults());
+        Assertions.assertTrue(test.hasErrors());
+
+        Assertions.assertEquals(2, test.getErrors().size());
+        Assertions.assertEquals("Unable to find node matching path: test, for class: leaf, during navigate to next node",
+            test.getErrors().get(0).description());
+        Assertions.assertEquals("Unable to find node matching path: test, for class: leaf, during TestPathMapper",
+            test.getErrors().get(1).description());
+
+        Mockito.verify(lexer, Mockito.times(1)).scan(any());
         Mockito.verify(configNodeService, Mockito.times(1)).navigateToNextNode(any(), any(List.class), any());
     }
 
