@@ -5,6 +5,7 @@ import org.github.gestalt.config.exceptions.GestaltException;
 import org.github.gestalt.config.lexer.SentenceLexer;
 import org.github.gestalt.config.node.ConfigNodeService;
 import org.github.gestalt.config.node.LeafNode;
+import org.github.gestalt.config.path.mapper.StandardPathMapper;
 import org.github.gestalt.config.reflect.TypeCapture;
 import org.github.gestalt.config.utils.ValidateOf;
 import org.junit.jupiter.api.Assertions;
@@ -58,7 +59,8 @@ class FloatDecoderTest {
         FloatDecoder floatDecoder = new FloatDecoder();
 
         ValidateOf<Float> validate = floatDecoder.decode("db.timeout", new LeafNode("124.5"), TypeCapture.of(Float.class),
-            new DecoderRegistry(Collections.singletonList(floatDecoder), configNodeService, lexer));
+            new DecoderRegistry(Collections.singletonList(floatDecoder), configNodeService, lexer,
+                List.of(new StandardPathMapper())));
         Assertions.assertTrue(validate.hasResults());
         Assertions.assertFalse(validate.hasErrors());
         Assertions.assertEquals(124.5f, validate.results());
@@ -70,7 +72,8 @@ class FloatDecoderTest {
         FloatDecoder floatDecoder = new FloatDecoder();
 
         ValidateOf<Float> validate = floatDecoder.decode("db.timeout", new LeafNode("124"), TypeCapture.of(Float.class),
-            new DecoderRegistry(Collections.singletonList(floatDecoder), configNodeService, lexer));
+            new DecoderRegistry(Collections.singletonList(floatDecoder), configNodeService, lexer,
+                List.of(new StandardPathMapper())));
         Assertions.assertTrue(validate.hasResults());
         Assertions.assertFalse(validate.hasErrors());
         Assertions.assertEquals(124, validate.results());
@@ -82,7 +85,8 @@ class FloatDecoderTest {
         FloatDecoder floatDecoder = new FloatDecoder();
 
         ValidateOf<Float> validate = floatDecoder.decode("db.timeout", new LeafNode("12s4"), TypeCapture.of(Float.class),
-            new DecoderRegistry(Collections.singletonList(floatDecoder), configNodeService, lexer));
+            new DecoderRegistry(Collections.singletonList(floatDecoder), configNodeService, lexer,
+                List.of(new StandardPathMapper())));
         Assertions.assertFalse(validate.hasResults());
         Assertions.assertTrue(validate.hasErrors());
         Assertions.assertNull(validate.results());
